init and startup
启动工程